static/css/main.css
:root {
    --border-radius: 3px;
    --status-1: #590000;
    --status-2: #594300;
    --status-3: #525900;
    --status-4: #085900;
}

body {
    min-width: 620px;
    background: #ddd url(http://cdn.backgroundhost.com/backgrounds/subtlepatterns/diagonal-noise.png);
    font-family: sans-serif;
}

h1, .board-title, .board-column-title {
    font-weight: 100;
}

h1 {
    text-align: center;
    font-size: 4em;
    letter-spacing: 5px;
    transform: scale(1.2, 1);
}

button {
    background: #222;
    color: #fff;
    border: none;
    font-size: 14px;
    font-family: sans-serif;
    padding: 4px 10px;
}

.board-container {
    max-width: 960px;
    margin: 0 auto;
}

section.board {
    margin: 20px;
    border: aliceblue;
    background: #ffffff90;
    border-radius: 3px;
}

.board-header {
    height: 50px;
    background: #fff;
    border-radius: var(--border-radius) var(--border-radius) 0 0;
}

.board-title {
    margin: 13px;
    display: inline-block;
    font-size: 20px;
}

.board-title, .board-add, .add-card, .board-toggle {
    display: inline-block;
}

.board-toggle {
    float: right;
    margin: 13px;
}

.board-columns {
    display: flex;
    flex-wrap: nowrap;
}

.board-column {
    padding: 10px;
    flex: 1;
}

.board-column-content {
    min-height: 49px;
}

.board-column-content:empty {
    /*This only works if the tag is really empty and there is not even whitespace inside*/
    border: 4px solid #cdcdcd;
    margin-top: 4px;
    border-radius: 10px;
    background: #eee;
}

.board-column-title {
    text-align: center;
}

.card {
    position: relative;
    background: #222;
    color: #fff;
    border-radius: var(--border-radius);
    margin: 4px 0;
    padding: 4px;
}

.board-column:nth-of-type(1) .card {
    background: var(--status-1);
}

.board-column:nth-of-type(2) .card {
    background: var(--status-2);
}

.board-column:nth-of-type(3) .card {
    background: var(--status-3);
}

.board-column:nth-of-type(4) .card {
    background: var(--status-4);
}

.card-remove {
    display: block;
    position: absolute;
    top: 4px;
    right: 4px;
    font-size: 12px;
    cursor: pointer;
}

.card-title {
    padding-right: 16px;
}

.hidden-board {
    display: none;
}

button, .add-card, .board-add, .card {
    padding: 6px 10px;
    border-radius: 3px
}

